--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,36 @@
-*.py[cod]
+# Python bytecode:
+*.py[co]
 
-# C extensions
-*.so
+# Packaging files:
+*.egg*
 
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-__pycache__
+# Editor temp files:
+*.swp
+*~
 
-# Installer logs
-pip-log.txt
+# Build dirs
+/docs/build
+/build
+/debian/aert-webfolder.substvars
+/debian/aert-webfolder/
+/debian/files
+/dist
 
-# Unit test / coverage reports
+# SQLite3 database files:
+/*.db
+
+# Logs:
+*.log
+
+# Others:
 .coverage
-.tox
-nosetests.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
+.idea
+.vagrant
+.tags
 .project
 .pydevproject
+
+# This project
+/public/assets/
+/RELEASE-VERSION
+/deploy/vagrant_ansible_inventory_default
