--- a/assets/etc/config_release.ini
+++ b/assets/etc/config_release.ini
@@ -3,7 +3,7 @@ DEVELOP = false
 ALLOWED_HOSTS_ = 127.0.0.1
 STATIC_ROOT = 'staticfiles'
 STATIC_URL = '/static/'
-MEDIA_ROOT = /opt/aert/www-webfolder/uploads
+MEDIA_ROOT = /app/assets/uploads
 MEDIA_URL = http://127.0.0.1/media/
 
 [database]
