--- a/deploy/ansible/roles/app_assets/tasks/supervisor.yml
+++ b/deploy/ansible/roles/app_assets/tasks/supervisor.yml
@@ -8,7 +8,7 @@
 
 # Start Supervisor
 - name: supervisor-start
-  shell: supervisorctl start assets
+  shell: service supervisor start
 
 # Configure supervisor
 - name: supervisor-file
