--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -22,7 +22,8 @@ Vagrant.configure("2") do |config|
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "ansible/playbook.yml"
     ansible.inventory_path = "ansible/inventory.ini"
-    ansible.extra_vars = { installer_local: INSTALLER_PATH, }
+    ansible.extra_vars = { installer_local: INSTALLER_PATH,
+                           app_servername: "127.0.0.1"}
   end
 
   # Customize the box
