--- a/deploy/ansible/roles/app_assets/tasks/app.yml
+++ b/deploy/ansible/roles/app_assets/tasks/app.yml
@@ -2,7 +2,7 @@
 
 # Install requirements
 - name: app_assets-apt
-  apt: pkg=$item state=installed
+  apt: pkg={{ item }} state=installed
   with_items:
     - python-virtualenv
     - python-pip
@@ -14,33 +14,35 @@
 
 # Create Dirs
 - name: app-dirs
-  file: path=$item state=directory owner=www-data group=www-data
+  file: path={{ item }} state=directory owner=www-data group=www-data
   with_items:
-    - "$prefix"
-    - "$tmp_path"
+    - "{{ prefix }}"
+    - "{{ tmp_path }}"
 
 # Upload & Install Installer
 - name: app-installer-upload
-  copy: src=$installer_tgz dest=${tmp_path} owner=www-data group=www-data
+  copy: src={{ item }} dest={{ tmp_path }} owner=www-data group=www-data
+  with_items:
+    - "{{ installer_tgz }}"
 
 - name: app-installer-untar
-  shell: cd ${tmp_path} && tar zxf {{installer_tgz|basename}}
+  shell: cd {{ tmp_path }} && tar zxf {{ installer_tgz | basename }}
 
 - name: app-installer-install
-  shell: cd ${tmp_path}/{{installer_dirname}} && make install PREFIX={{ prefix }}
+  shell: cd {{ tmp_path }}/{{ installer_dirname }} && make install PREFIX={{ prefix }}
 
 - name: app-installer-clean
-  file: path=${tmp_path}/{{installer_dirname}} state=absent
+  file: path={{ tmp_path }}/{{ installer_dirname }} state=absent
 
 # Config Dirs 
 - name: app-dirs-app
-  file: path=$item state=directory owner=www-data group=www-data  recurse=yes
+  file: path={{ item }} state=directory owner=www-data group=www-data  recurse=yes
   with_items:
-    - "$app_env"
-    - "$app_assets"
-    - "$app_uploads"
-    - "$app_log"
-    - "$app_fixtures"
+    - "{{ app_env }}"
+    - "{{ app_assets }}"
+    - "{{ app_uploads }}"
+    - "{{ app_log }}"
+    - "{{ app_fixtures }}"
 
 # Migrate db
 
@@ -48,11 +50,11 @@
 
 # App utility
 - name: app-make-file
-  template: src=Makefile.j2 dest=$app_home/Makefile owner=www-data group=www-data
+  template: src=Makefile.j2 dest={{ app_home }}/Makefile owner=www-data group=www-data
 
 # Upload Fixtures
 - name: app-fixtures-upload
-  copy: src=$item dest=${app_fixtures} owner=www-data group=www-data
+  copy: src={{ item }} dest={{ app_fixtures }} owner=www-data group=www-data
   with_items:
     - "initial_data_auth.yaml"
     - "initial_data_students.yaml"
@@ -61,12 +63,12 @@
 
 # Configure App
 - name: app-config-file
-  template: src=config_vagrant.ini.j2 dest=$app_home/config.ini owner=www-data group=www-data
+  template: src=config_vagrant.ini.j2 dest={{ app_home }}/config.ini owner=www-data group=www-data
 
 # Configure gunicorn
 - name: app-gunicorn
-  template: src=start_gunicorn.sh.j2 dest=$app_home/start_gunicorn.sh mode=0751 owner=www-data group=www-data
+  template: src=start_gunicorn.sh.j2 dest={{ app_home }}/start_gunicorn.sh mode=0751 owner=www-data group=www-data
 
 - name: app-perms
-  shell: chown -R www-data:www-data ${app_home}
+  shell: chown -R www-data:www-data {{ app_home }}
 
