--- a/deploy/ansible/roles/app_assets/tasks/supervisor.yml
+++ b/deploy/ansible/roles/app_assets/tasks/supervisor.yml
@@ -2,7 +2,7 @@
 
 # Install requirements
 - name: supervisor-apt
-  apt: pkg=$item state=installed
+  apt: pkg={{ item }} state=installed
   with_items:
     - supervisor
 
