--- a/assets/etc/config_release.ini
+++ b/assets/etc/config_release.ini
@@ -1,10 +1,11 @@
 [main]
 DEVELOP = false
+LOG_DIR = 
 ALLOWED_HOSTS_ = 127.0.0.1
-STATIC_ROOT = 'staticfiles'
-STATIC_URL = '/static/'
-MEDIA_ROOT = /app/assets/uploads
-MEDIA_URL = http://127.0.0.1/media/
+STATIC_ROOT = 
+STATIC_URL = 
+MEDIA_ROOT = 
+MEDIA_URL = 
 
 [database]
 DATABASE_USER_ =
