--- a/deploy/ansible/roles/common/tasks/main.yml
+++ b/deploy/ansible/roles/common/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Install base pkgs
+- name: base_apt
   apt: pkg={{ item }} state=installed update_cache=yes
   with_items:
     - vim
