--- a/deploy/ansible/roles/app_assets/tasks/nginx.yml
+++ b/deploy/ansible/roles/app_assets/tasks/nginx.yml
@@ -1,9 +1,9 @@
 ---
 
-- name: app-nginx-available
+- name: nginx_app_available
   template: src=site_assets.app.j2 dest=/etc/nginx/sites-available/assets.app owner=www-data group=www-data
 
-- name: app-nginx-enable
+- name: nginx_app_enable
   file: src=/etc/nginx/sites-available/assets.app dest=/etc/nginx/sites-enabled/assets.app state=link owner=www-data group=www-data
   notify:
     - restart nginx
