--- a/assets/etc/config_release.ini
+++ b/assets/etc/config_release.ini
@@ -6,6 +6,8 @@ STATIC_ROOT =
 STATIC_URL = 
 MEDIA_ROOT = 
 MEDIA_URL = 
+PROTECTED_MEDIA_ROOT = 
+PROTECTED_MEDIA_URL = 
 
 [database]
 DATABASE_USER_ =
